{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 29,
  "lineage": "f7d2b2ad-0d4f-7228-7439-5ad04c6b8055",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-054608733ad246c20",
            "domain": "vpc",
            "id": "eipalloc-054608733ad246c20",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-34-214-37-63.us-west-2.compute.amazonaws.com",
            "public_ip": "34.214.37.63",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-us-west-2a",
              "Project": "vpc",
              "Team": "hillel devops"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-us-west-2a",
              "Project": "vpc",
              "Team": "hillel devops"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:882205163664:internet-gateway/igw-0ae855ca243e0fd5d",
            "id": "igw-0ae855ca243e0fd5d",
            "owner_id": "882205163664",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc",
              "Project": "vpc",
              "Team": "hillel devops"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc",
              "Project": "vpc",
              "Team": "hillel devops"
            },
            "vpc_id": "vpc-0d8152e8162362ed8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-054608733ad246c20",
            "connectivity_type": "public",
            "id": "nat-0753dc26fc2cd2037",
            "network_interface_id": "eni-0a990435f4c08ac63",
            "private_ip": "10.10.10.33",
            "public_ip": "34.214.37.63",
            "subnet_id": "subnet-05ebeca6d3295af0e",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-us-west-2a",
              "Project": "vpc",
              "Team": "hillel devops"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-us-west-2a",
              "Project": "vpc",
              "Team": "hillel devops"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ff0558044a7fe2fc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0753dc26fc2cd2037",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ff0558044a7fe2fc",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ae855ca243e0fd5d",
            "id": "r-rtb-0d21a0855e44bf6d51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d21a0855e44bf6d5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:882205163664:route-table/rtb-0ff0558044a7fe2fc",
            "id": "rtb-0ff0558044a7fe2fc",
            "owner_id": "882205163664",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-private-us-west-2a",
              "Project": "vpc",
              "Team": "hillel devops"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-private-us-west-2a",
              "Project": "vpc",
              "Team": "hillel devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8152e8162362ed8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:882205163664:route-table/rtb-0d21a0855e44bf6d5",
            "id": "rtb-0d21a0855e44bf6d5",
            "owner_id": "882205163664",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-public",
              "Project": "vpc",
              "Team": "hillel devops"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-public",
              "Project": "vpc",
              "Team": "hillel devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8152e8162362ed8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0717474728a5b7a",
            "route_table_id": "rtb-0ff0558044a7fe2fc",
            "subnet_id": "subnet-05167ea3628932bf7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01602f7d115c696d3",
            "route_table_id": "rtb-0d21a0855e44bf6d5",
            "subnet_id": "subnet-05ebeca6d3295af0e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:882205163664:subnet/subnet-05167ea3628932bf7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.10.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05167ea3628932bf7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "882205163664",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-private-us-west-2a",
              "Project": "vpc",
              "Team": "hillel devops"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-private-us-west-2a",
              "Project": "vpc",
              "Team": "hillel devops"
            },
            "vpc_id": "vpc-0d8152e8162362ed8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:882205163664:subnet/subnet-05ebeca6d3295af0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.10.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ebeca6d3295af0e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "882205163664",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-public-us-west-2a",
              "Project": "vpc",
              "Team": "hillel devops"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-public-us-west-2a",
              "Project": "vpc",
              "Team": "hillel devops"
            },
            "vpc_id": "vpc-0d8152e8162362ed8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:882205163664:vpc/vpc-0d8152e8162362ed8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-09e02ff0e8c43ded6",
            "default_route_table_id": "rtb-0c7fcb6b3fbfd379c",
            "default_security_group_id": "sg-0a06f57e2527695a8",
            "dhcp_options_id": "dopt-0f45d693a958afa0c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d8152e8162362ed8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c7fcb6b3fbfd379c",
            "owner_id": "882205163664",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc",
              "Project": "vpc",
              "Team": "hillel devops"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc",
              "Project": "vpc",
              "Team": "hillel devops"
            }
          }
        }
      ]
    }
  ]
}